@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>RDFLib 1.3.1 Readme</title>
+    <title>RDFLib 1.3.2 Readme</title>
     <link rel="STYLESHEET" href="doc/rdflib.css"/>
   </head>
   <body>
@@ -8,15 +8,15 @@
       [ <a href="http://rdflib.net/">RDFLib</a> ]
     </div>
 
-    <h1><a href="">RDFLib 1.3.1</a></h1>
+    <h1><a href="">RDFLib 1.3.2</a></h1>
 
   <div class="document_versions">
     <h2 style="margin-top: 0em;">Versions</h2>
     <dl>
       <dt>This Version</dt>
       <dd>
-        <a href="http://rdflib.net/2003/10/14/rdflib-1.3.1/">
-          http://rdflib.net/2003/10/14/rdflib-1.3.1/
+        <a href="http://rdflib.net/2004/01/04/rdflib-1.3.2/">
+          http://rdflib.net/2004/01/04/rdflib-1.3.2/
         </a>
       </dd>
       <dt>Latest Development Version</dt>
@@ -61,14 +61,14 @@ release to release within this branch than in the stable branch.
     <dl> 
       <dt>TGZ</dt>
       <dd>
-        <a href="http://rdflib.net/2003/10/14/rdflib-1.3.1.tgz">
-          http://rdflib.net/2003/10/14/rdflib-1.3.1.tgz
+        <a href="http://rdflib.net/2004/01/04/rdflib-1.3.2.tgz">
+          http://rdflib.net/2004/01/04/rdflib-1.3.2.tgz
         </a>
       </dd>
       <dt>ZIP</dt>
       <dd>
-        <a href="http://rdflib.net/2003/10/14/rdflib-1.3.1.zip">
-          http://rdflib.net/2003/10/14/rdflib-1.3.1.zip
+        <a href="http://rdflib.net/2004/01/04/rdflib-1.3.2.zip">
+          http://rdflib.net/2004/01/04/rdflib-1.3.2.zip
         </a>
       </dd>
     </dl>
@@ -86,7 +86,7 @@ release to release within this branch than in the stable branch.
 <p><img src="doc/osi-certified-120x100.png" alt="osi-certified-120x100.png border="0 width="120" height="100"></p>
 
     <p class="cvs_id">
-      $Id: index.html,v 1.39 2003/10/14 15:17:29 eikeon Exp $
+      $Id: index.html,v 1.39 2004/01/04 15:17:29 eikeon Exp $
     </p>
 
   </body>
