@@ -1,4 +1,4 @@
-2003/11/08
+2004/01/04
 	RELEASE 1.3.2
 
 	Added a serialization dispatcher.
@@ -7,6 +7,9 @@
 
 	Store now remembers prefix/namespace bindings.
 
+	Backends are now more pluggable
+
+	...
 
 2003/10/14
 	RELEASE 1.3.1
